# home-services

./: .gitignore  README.md  ROADMAP.md  install.sh
ai-helper/: README.md  pyproject.toml
ai-helper/src/ai_helper_service/: __init__.py  client.py  config.py  main.py  model.py  provider.py  server.py  voice.py
ai-helper/tests/: test_cli.py
dictation/: README.md  config.yaml  pyproject.toml
dictation/src/dictation_router/: __init__.py  __main__.py  alerts.py  app.py  jobs.py  logging_setup.py  main.py
dictation/src/dictation_router/audio/: recorder.py
dictation/src/dictation_router/config/: settings.py
dictation/src/dictation_router/routing/: __init__.py  cleaner.py  destination.py  editor.py  inserter.py  router.py
dictation/src/dictation_router/transcription/: __init__.py  postprocess.py  whisper_cpp.py
dictation/src/dictation_router/ui/: feedback.py  hotkeys.py  permissions.py
dictation/tests/: test_core.py
menubar/: Info.plist  Package.swift  build-app.sh
menubar/Sources/HomeServicesMenuBar/: main.swift
moviewatch/: moviewatch2.sh
