[project]
name = "dictation-router"
version = "0.1.0"
description = "Local Whisper dictation router for macOS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pynput>=1.7",
    "PyYAML>=6.0",
    "sounddevice>=0.5",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
dictation-router = "dictation_router.main:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
